Fix image expansion icon Make menu an icon too.

--- a/css/icons.base.css
+++ b/css/icons.base.css
@@ -6,7 +6,9 @@ body > div.navLinks > a:first-of-type::after,
 #{if Conf['Announcements'] is 'slideout' then '#globalMessage::after,' else ''}
 #boardNavDesktopFoot::after,
 body > a[style="cursor: pointer; float: right;"]::after,
-#imgControls label:first-of-type::after,
+#imgControls .expand-all-shortcut,
+#imgControls .contract-all-shortcut,
+#imgControls .menu-button,
 #catalog::after,
 #fappeTyme {
   z-index: 18;
@@ -15,7 +17,6 @@ body > a[style="cursor: pointer; float: right;"]::after,
   width: 15px;
   height: 15px;
   content: "";
-  overflow: hidden;
   opacity: #{if Conf['Invisible Icons'] then 0 else 0.5};
 }
 #navtopright .exlinksOptionsLink,
@@ -33,14 +34,11 @@ body > div.navLinks > a:first-of-type:hover,
 #{if Conf['Announcements'] is 'slideout' then '#globalMessage:hover,' else ''}
 #boardNavDesktopFoot:hover,
 body > a[style="cursor: pointer; float: right;"]:hover,
+#imgControls .expand-all-shortcut,
+#imgControls .contract-all-shortcut,
+#imgControls .menu-button,
 #catalog:hover {
   z-index: 17;
-}
-#imgControls {
-  z-index: 19;
-}
-#imgControls {
-  position: fixed;
 }
 #appchanOptions {
   visibility: visible;
@@ -64,8 +62,8 @@ body > a[style="cursor: pointer; float: right;"]::after {
   cursor: pointer;
   background-position: 0 -75px;
 }
-#imgControls label:first-of-type::after {
-  position: static;
+#imgControls .expand-all-shortcut,
+#imgControls .contract-all-shortcut {
   background-position: 0 -90px;
 }
 #navtopright .exlinksOptionsLink::after {
@@ -80,7 +78,9 @@ body > a[style="cursor: pointer; float: right;"]::after {
 }
 #boardNavDesktopFoot:hover::after,
 #globalMessage:hover::after,
-#imgControls label:hover:first-of-type::after,
+#imgControls .expand-all-shortcut:hover,
+#imgControls .contract-all-shortcut:hover,
+#imgControls .menu-button:hover,
 #navlinks a:hover,
 #appchanOptions:hover,
 #navtopright .exlinksOptionsLink:hover::after,
