--- a/css/icons.vert.css
+++ b/css/icons.vert.css
@@ -1,6 +1,11 @@
 
-/* Image Expansion */
-#imgControls {
+/* Expand Images */
+#imgControls .expand-all-shortcut,
+#imgControls .contract-all-shortcut {
+  top: #{position[i++]}px;
+}
+/* Expand Images Menu */
+#imgControls .menu-button {
   top: #{position[i++]}px;
 }
 /* 4chan X Options */
@@ -59,7 +64,9 @@ div.navLinks > a:first-of-type::after {
 #appchanOptions,
 #boardNavDesktopFoot::after,
 #globalMessage::after,
-#imgControls,
+#imgControls .expand-all-shortcut,
+#imgControls .contract-all-shortcut,
+#imgControls .menu-button,
 #fappeTyme,
 #{if _conf["Slideout Watcher"] then "#watcher::after," else ""}
 body > a[style="cursor: pointer; float: right;"]::after,
