--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   padding: 0;
 }
 .field {
+  background-color: #FFF;
   border: 1px solid #CCC;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
