Get style settings and theme selection working.

--- a/css/icons.horz.css
+++ b/css/icons.horz.css
@@ -47,7 +47,7 @@ div.navLinks > a:first-of-type::after {
 /* Thread Navigation Links */
 #navlinks a {
   margin: 2px;
-  top: 0;
+  top: 1px;
 }
 #navlinks a:last-of-type {
   #{align}: #{position[i++]}px;
@@ -73,12 +73,12 @@ div.navLinks > a:first-of-type::after {
 div.navLinks > a:first-of-type::after,
 #catalog::after,
 body > a[style="cursor: pointer; float: right;"]::after {
-  top: 0 !important;
+  top: 1px !important;
 }
 #{if _conf["Announcements"] is "slideout" then "#globalMessage," else ""}
 #{if _conf["Slideout Watcher"] then "#watcher," else ""}
 #boardNavDesktopFoot {
-  top: 17px !important;
+  top: 16px !important;
 }
 #{if _conf['Boards Navigation'] is 'top' or _conf['Boards Navigation'] is 'sticky top' then '#boardNavDesktop' else if _conf['Pagination'] is 'top' or _conf['Pagination'] is 'sticky top' then '.pagelist'} {
   #{if _conf['4chan SS Navigation']
