--- a/css/style.css
+++ b/css/style.css
@@ -549,7 +549,7 @@ a[href="javascript:;"] {
 :root.hide-original-post-form #postForm,
 :root.hide-original-post-form .postingMode,
 :root.hide-original-post-form #togglePostForm,
-#qr.autohide:not(:hover) > form {
+#qr.autohide:not(.has-focus):not(:hover) > form {
   display: none;
 }
 #qr select, #dump-button, .remove, .captcha-img {
