--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ a[href="javascript:;"] {
 #fourchanx-settings,
 #qp, #ihover,
 #updater, #thread-stats,
-#navlinks, #boardNavDesktop.fixed,
+#navlinks, .fixed #boardNavDesktop,
 #watcher,
 #qr {
   position: fixed;
@@ -88,14 +88,11 @@ a[href="javascript:;"] {
 #qr {
   z-index: 30;
 }
-#watcher:hover {
+#watcher {
   z-index: 20;
 }
-#boardNavDesktop.fixed {
+.fixed #boardNavDesktop {
   z-index: 10;
-}
-#watcher {
-  z-index: 5;
 }
 
 /* Header */
@@ -103,14 +100,14 @@ a[href="javascript:;"] {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-#boardNavDesktop.fixed {
+.fixed #boardNavDesktop {
   right: 0;
   left: 0;
 }
-#boardNavDesktop.fixed.top {
+.fixed.top #boardNavDesktop {
   top: 0;
 }
-#boardNavDesktop.fixed.bottom {
+.fixed.bottom #boardNavDesktop {
   bottom: 0;
 }
 #boardNavDesktop {
@@ -119,30 +116,30 @@ a[href="javascript:;"] {
   position: relative;
   transition: all .1s .05s ease-in-out;
 }
-#boardNavDesktop.fixed.top {
+.fixed.top #boardNavDesktop {
   border-bottom-width: 1px;
 }
-#boardNavDesktop.fixed.bottom {
+.fixed.bottom #boardNavDesktop {
   box-shadow: 0 -1px 2px rgba(0, 0, 0, .15);
   border-top-width: 1px;
 }
-#boardNavDesktop.fixed.bottom .menu-button i {
+.fixed.bottom #boardNavDesktop .menu-button i {
   border-top: none;
   border-bottom: 6px solid;
 }
 #board-list {
   text-align: center;
 }
-#boardNavDesktop.fixed.autohide:not(:hover) {
+.fixed #boardNavDesktop.autohide:not(:hover) {
   box-shadow: none;
   transition: all .8s .6s cubic-bezier(.55, .055, .675, .19);
 }
-#boardNavDesktop.fixed.top.autohide:not(:hover) {
+.fixed.top #boardNavDesktop.autohide:not(:hover) {
   margin-bottom: -1em;
   -webkit-transform: translateY(-100%);
   transform: translateY(-100%);
 }
-#boardNavDesktop.fixed.bottom.autohide:not(:hover) {
+.fixed.bottom #boardNavDesktop.autohide:not(:hover) {
   -webkit-transform: translateY(100%);
   transform: translateY(100%);
 }
@@ -152,19 +149,22 @@ a[href="javascript:;"] {
   height: 10px;
   position: absolute;
 }
-#boardNavDesktop:not(.fixed) #toggle-header-bar {
+#boardNavDesktop #toggle-header-bar {
   display: none;
 }
-#boardNavDesktop.fixed #toggle-header-bar {
+.fixed #boardNavDesktop #toggle-header-bar {
+  display: block;
+}
+.fixed #boardNavDesktop #toggle-header-bar {
   cursor: n-resize;
 }
-#boardNavDesktop.fixed.top #toggle-header-bar {
+.fixed.top boardNavDesktop #toggle-header-bar {
   top: 100%;
 }
-#boardNavDesktop.fixed.bottom #toggle-header-bar {
+.fixed.bottom #boardNavDesktop #toggle-header-bar {
   bottom: 100%;
 }
-##boardNavDesktop.fixed #header-bar.autohide #toggle-header-bar {
+.fixed #boardNavDesktop #header-bar.autohide #toggle-header-bar {
   cursor: s-resize;
 }
 #boardNavDesktop a:not(.entry) {
